fix z-index modal bug

--- a/src/styles/sass/style.scss
+++ b/src/styles/sass/style.scss
@@ -61,10 +61,6 @@ body {
 	overflow-y: auto;
 }
 
-.restauMap {
-    z-index: 0;
-}
-
 .col-lg-8.restauMap {
     padding: 0;
 }
